Fixes some Sonar issues